set theam color

--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -18,7 +18,7 @@ body {
   left: 0;
   width: 100%;
   height: 2px; /* Set your preferred underline thickness */
-  background-color: #ff365a; /* Set your preferred underline color */
+  background-color: #ff5823; /* Set your preferred underline color */
   transform: scaleX(0);
   transform-origin: bottom right;
   transition: transform 0.3s ease-in-out; /* Adjust the transition duration and timing function as needed */
