--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -78,3 +78,9 @@ body {
 .contact-input:focus::placeholder {
   color: #000000; /* Change the color to your desired focus placeholder color */
 }
+
+.glass-effect {
+  backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
